# virtiofsd

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
doc/: xattr-mapping.md
src/: descriptor_utils.rs  file_traits.rs  filesystem.rs  fs_cache_req_handler.rs  fuse.rs  lib.rs  limits.rs  macros.rs  main.rs  multikey.rs  passthrough.rs  read_dir.rs  sandbox.rs  seccomp.rs  server.rs  util.rs
src/passthrough/: file_handle.rs  inode_store.rs  mod.rs  mount_fd.rs  stat.rs  xattrmap.rs
src/passthrough/stat/: file_status.rs
