[package]
name = "virtiofsd-rs"
description = "A virtio-fs vhost-user device daemon"
version = "0.1.0"
authors = ["The Virtiofs Project Developers"]
edition = "2018"
homepage = "https://virtio-fs.gitlab.io/"
repository = "https://gitlab.com/virtio-fs/virtiofsd-rs"
license = "Apache-2.0 AND BSD-3-Clause"
readme = "README.md"

exclude = [".gitlab-ci.yml"]

[dependencies]
bitflags = "1.2"
capng = "0.2.1"
env_logger = "0.8.4"
futures = { version = "0.3", features = ["thread-pool"] }
libc = "~0.2.87"
log = "0.4"
seccomp-sys = "0.1.3"
structopt = "0.3"
tempdir = "0.3"
vhost-user-backend = "0.1"
vhost = "0.3"
virtio-bindings = { version = "0.1", features = ["virtio-v5_0_0"] }
vm-memory = { version = "0.7", features = ["backend-mmap"] }
virtio-queue = "0.1"
vmm-sys-util = "0.9"

[profile.release]
lto = true
